@@ -23,6 +23,7 @@ Date:
         - "Map generated" entities that don't generate in any locations could break automation analysis.
         - Recipes that are referenced without being defined do not prevent YAFC from loading.
         - (SA) Tree seeds used by the agricultural tower no longer appear twice in the Dependency Explorer.
+        - Milestone analysis got slower in 2.4.0; increase its speed.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.4.0
 Date: November 21st 2024
